--- a/.gitignore
+++ b/.gitignore
@@ -46,12 +46,11 @@ venv.bak/
 ehthumbs.db
 Thumbs.db
 
-# Project specific - test files
-test_results.*
-test_page30.py
+# Project specific - test and debug files  
+test_*
 *_interrupted_*
 *.log
 
 # Scraped data (uncomment if you don't want to commit output files)
-# vipkadr_jobs_*.csv
-# vipkadr_jobs_*.json
+# vipkadr_candidates_*.csv
+# vipkadr_candidates_*.json
